--- a/examples/simple.html
+++ b/examples/simple.html
@@ -4,7 +4,7 @@
     <script src="./../dist/apisearch-autocomplete.js"></script>
 </head>
 <body>
-    <input type="search" class="as-autocomplete" />
+    <input type="search" class="as-autocomplete" placeholder="search..." />
 
     <script>
         apisearchAutocomplete({
