wip: keycode events

--- a/examples/autocomplete.html
+++ b/examples/autocomplete.html
@@ -65,7 +65,9 @@
     </style>
 </head>
 <body>
-    <input type="search" class="as-autocomplete" placeholder="search..." />
+    <form action="">
+        <input type="search" class="as-autocomplete" placeholder="search..." />
+    </form>
 
     <script>
         apisearchAutocomplete({
