feature: start search at some character number

--- a/examples/autocomplete.html
+++ b/examples/autocomplete.html
@@ -25,6 +25,7 @@
         autocomplete({
             inputTarget: '.as-autocomplete',
             poweredBy: true,
+            startSearchOn
             datasets: [{
                 type: 'object',
                 template: {
