fix(SearchInput): fixed autorendering search input without necessity

--- a/examples/autocomplete.html
+++ b/examples/autocomplete.html
@@ -25,7 +25,7 @@
         autocomplete({
             inputTarget: '.as-autocomplete',
             poweredBy: true,
-            startSearchOn
+            itemsPerResult: 12,
             datasets: [{
                 type: 'object',
                 template: {
