--- a/examples/autocomplete.html
+++ b/examples/autocomplete.html
@@ -6,11 +6,17 @@
 </head>
 <body>
     <form action="./autocomplete.html">
-        <input type="search"
-               class="as-autocomplete"
-               placeholder="search..."
-               autofocus
+        <h1>Hello world</h1>
+        <p>Hello this is a paragraph</p>
+        <input
+            type="search"
+            class="as-autocomplete"
+            placeholder="search..."
+            autofocus
         />
+        <p>Another paragraph</p>
+        <p>Another paragraph 2</p>
+        <p>Another paragraph 3</p>
     </form>
 
     <script>
